--- a/pirmas.html
+++ b/pirmas.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="lt">
     <head>
         <meta charset="UTF-8">
-        <title>svetaine</title>
+        <title>Svetaine</title>
     </head>
     <body>
-        <h1>labas rytas</h1>
-        <p>viso gero</p><br>
-        <b>orange</b><br>
-        <i>banana</i><br>
+        <h3>Apie</h3>
+        <p>Povilas Kvekšas, automatikos antro kurso studentas VILNIUS TECH universitete.</p>
+        <h3>Faktai</h3>
+        <ul>
+            <li>2022 m. baigiau Gargždų "Vaivorykštės" gimnaziją</li>
+            <li>....</li>
+            <li>....</li>
+            <li>....</li>
+        </ul>
+        <h3>Įgūdžiai</h3>
+        <ul>
+            <li>....</li>
+            <li>....</li>
+            <li>....</li>
+        </ul>
+        <img src="kengura.jpg" width="400" height="300">
+        <img src="niu jorkas.jpeg" width="400" height="300"> <br>
+        <video width="800" height="600" controls>
+            <source src="nba 11-10.mp4" type="video/mp4">
+        </video>
+        <iframe width="800" height="600"
+            src="https://www.youtube.com/embed/UnVrBe-QBT0">
+        </iframe> <br>
+        <audio controls>
+            <source src="music.mp3" type="audio/mp3">
+        </audio> <br>
         <object data="vp.html"></object>
     </body>
 </html>
